fix: for policy edit checkbox layout
which should be aligned to left and not centered

--- a/linotpd/src/linotp/public/manage/style.css
+++ b/linotpd/src/linotp/public/manage/style.css
@@ -226,7 +226,7 @@ a.close_all {
   width: 100%;
 }
 
-#policy_form input,
+#policy_form input:not([type="checkbox"]),
 #policy_form select {
   width: 100%;
   box-sizing: border-box;
